kind of working still needs more work

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,16 @@
-
-
 <h1>Hello, Bloggers!</h1>
 <%= link_to 'My Blog', controller: 'articles' %>
 <h1></h1>
 <%= link_to 'New Article', new_article_path %>
 <h1></h1>
+
+<p>
+  This is the home page for the
+  <a href="http://www.railstutorial.org/">The Featherie</a>
+  sample application.
+</p>
+
+
 <table>
   <tr>
     <th>Title</th>
