--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,9 @@
-<h1>Hello, Rails!</h1>
+<div class="center jumbotron">
+  <h1>Welcome to The Featherie</h1>
+
+  <h2>
+    This is the home of the worlds favorite golf blog.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
